0032357: Coding Rules - eliminate GCC11 compiler warnings -Wignored-qualifiers